--- a/package.json
+++ b/package.json
@@ -20,42 +20,14 @@
   },
   "homepage": "https://github.com/xueeinstein/nwk",
   "dependencies": {
-    "archy": "~1.0.0",
-    "async-some": "^1.0.1",
-    "chownr": "0",
-    "fs-vacuum": "^1.2.5",
-    "fs-write-stream-atomic": "~1.0.2",
-    "fstream": "^1.0.4",
-    "fstream-npm": "^1.0.2",
-    "glob": "^5.0.5",
-    "graceful-fs": "~3.0.6",
-    "inflight": "~1.0.4",
-    "lockfile": "~1.0.0",
-    "mkdirp": "~0.5.0",
+    "fs-write-stream-atomic": "^1.0.2",
     "nopt": "^3.0.1",
-    "normalize-git-url": "~1.0.0",
     "npm": "^2.7.3",
     "npmlog": "^1.2.0",
-    "npm-cache-filename": "~1.0.1",
-    "npm-package-arg": "~2.1.3",
-    "npm-registry-client": "~6.1.1",
-    "once": "~1.3.1",
-    "path-is-inside": "~1.0.0",
-    "npm-install-checks": "~1.0.5",
-    "read-installed": "^4.0.0",
-    "read-package-json": "^2.0.0",
-    "realize-package-specifier": "~1.3.0",
-    "retry": "~0.6.1",
-    "rimraf": "~2.3.2",
+    "rimraf": "^2.3.3",
     "semver": "^4.3.4",
-    "sha": "~1.3.0",
     "slide": "^1.1.6",
-    "sorted-object": "~1.0.0",
-    "tar": "^2.1.0",
-    "uid-number": "0.0.6",
-    "umask": "^1.1.0",
-    "which": "~1.0.9",
-    "write-file-atomic": "~1.1.0"
+    "umask": "^1.1.0"
   },
   "devDependencies": {
     "chai": "^2.3.0",
