--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   "homepage": "https://github.com/xueeinstein/nwk",
   "dependencies": {
     "fs-write-stream-atomic": "^1.0.2",
+    "mkdirp": "^0.5.0",
     "nopt": "^3.0.1",
     "npm": "^2.7.3",
     "npmlog": "^1.2.0",
     "rimraf": "^2.3.3",
     "semver": "^4.3.4",
     "slide": "^1.1.6",
+    "tarball-extract": "0.0.3",
     "umask": "^1.1.0"
   },
   "devDependencies": {
