--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nopt": "^3.0.1",
     "npm": "^2.7.3",
     "npmlog": "^1.2.0",
+    "object-assign": "^2.0.0",
     "rimraf": "^2.3.3",
     "semver": "^4.3.4",
     "slide": "^1.1.6",
