--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/xueeinstein/nwk",
   "dependencies": {
+    "decompress": "^2.3.0",
     "fs-write-stream-atomic": "^1.0.2",
     "mkdirp": "^0.5.0",
     "nopt": "^3.0.1",
