support test addons build, enable auto correct module path error

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/xueeinstein/nwk",
   "dependencies": {
+    "async": "^0.9.0",
     "decompress": "^2.3.0",
     "fs-write-stream-atomic": "^1.0.2",
     "mkdirp": "^0.5.0",
